-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.2
-
None
-
None
-
8113f2d94afd4e25caf12edf9716b7e0a82de1a8
When widget which is made visible either with show() or showNormal() receives orientation change event, the normalGeometry and position of widget are not updated. Meaning that screen estate is not used efficiently and it is looking quite bad. See attached screenshots from deform before and after orientation switch.
I think it should be ok to adjust automatically the size and position of widget displayed with show() or showNormal() after orientation switch, if position or size is not explicitly set by developer.